--- a/index.html
+++ b/index.html
@@ -9,82 +9,135 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #26a69a;
-            --secondary-color: #ee6e73;
-            --background-dark: #121212;
-            --card-background: #1e1e1e;
+            --primary-color: #2196f3;
+            --secondary-color: #1976d2;
+            --accent-color: #64b5f6;
+            --background-dark: #0a1929;
+            --card-background: #132f4c;
+            --text-primary: #ffffff;
+            --text-secondary: #b2bac2;
         }
 
         body {
             background-color: var(--background-dark);
-            color: white;
-            font-family: "Roboto", sans-serif;
+            color: var(--text-primary);
+            font-family: "Roboto", system-ui, -apple-system, sans-serif;
             margin: 0;
             padding: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .header {
-            padding: 20px 0;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            margin-bottom: 30px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-            text-align: center;
+            padding: 2rem 0;
+            background: linear-gradient(145deg, var(--primary-color), var(--secondary-color));
+            margin-bottom: 2rem;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.1) 0%, transparent 60%);
         }
 
         .header h1 {
-            font-size: 2.8rem;
+            font-size: 3rem;
             margin: 0;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-        }
-
-        #channel-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            max-width: 1400px;
-            margin: 0 auto;
-        }
-
-        .channel-card {
-            background: var(--card-background);
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-            transition: transform 0.4s ease;
-            cursor: pointer;
-        }
-
-        .channel-card:hover {
-            transform: translateY(-5px) scale(1.02);
-            box-shadow: 0 12px 24px rgba(0,0,0,0.4);
-        }
-
-        .channel-logo {
-            width: 100%;
-            height: 160px;
-            object-fit: cover;
-        }
-
-        .channel-details {
-            padding: 15px;
             text-align: center;
+            font-weight: 700;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            position: relative;
         }
 
         #video-container {
             position: relative;
             width: 100%;
-            max-width: 1000px;
-            margin: 30px auto;
-            border-radius: 15px;
+            max-width: 1200px;
+            margin: 2rem auto;
+            border-radius: 1rem;
             overflow: hidden;
             box-shadow: 0 8px 32px rgba(0,0,0,0.5);
+            background: var(--card-background);
+            transition: transform 0.3s ease;
+        }
+
+        #video-container:hover {
+            transform: translateY(-5px);
         }
 
         #video-player {
             width: 100%;
             aspect-ratio: 16 / 9;
             background: #000;
+        }
+
+        #channel-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 1.5rem;
+            padding: 1.5rem;
+            max-width: 1400px;
+            margin: 0 auto;
+            flex-grow: 1;
+        }
+
+        .channel-card {
+            background: var(--card-background);
+            border-radius: 1rem;
+            overflow: hidden;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+        }
+
+        .channel-card:hover {
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 12px 28px rgba(0,0,0,0.3);
+        }
+
+        .channel-card::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: 1rem;
+            border: 2px solid transparent;
+            transition: border-color 0.3s ease;
+        }
+
+        .channel-card:hover::after {
+            border-color: var(--accent-color);
+        }
+
+        .channel-logo {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            transition: transform 0.4s ease;
+        }
+
+        .channel-card:hover .channel-logo {
+            transform: scale(1.05);
+        }
+
+        .channel-details {
+            padding: 1.25rem;
+            text-align: center;
+            background: linear-gradient(0deg, var(--card-background) 0%, rgba(19, 47, 76, 0.8) 100%);
+        }
+
+        .channel-details p {
+            margin: 0;
+            font-size: 1.1rem;
+            color: var(--text-primary);
+            font-weight: 500;
         }
 
         .loading-animation {
@@ -103,30 +156,53 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 3px solid transparent;
+            border: 3px solid rgba(255,255,255,0.1);
             border-top-color: var(--primary-color);
-            animation: spin 1s linear infinite;
+            animation: spin 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            to { transform: rotate(360deg); }
         }
 
         footer {
             text-align: center;
-            margin-top: 40px;
-            padding: 20px;
+            padding: 1.5rem;
             background-color: var(--card-background);
-            border-top: 1px solid #333;
+            border-top: 1px solid rgba(255,255,255,0.1);
+            margin-top: 3rem;
+        }
+
+        footer p {
+            color: var(--text-secondary);
+            margin: 0;
+        }
+
+        footer a {
+            color: var(--accent-color);
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        footer a:hover {
+            color: var(--primary-color);
+        }
+
+        @media (max-width: 768px) {
+            .header h1 {
+                font-size: 2rem;
+            }
+
+            #channel-list {
+                grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+                padding: 1rem;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>Advanced Bangla IPTV</h1>
-        <p>Experience premium Bangla television channels in HD quality</p>
-    </div>
+    <header class="header">
+    </header>
 
     <div id="video-container">
         <div class="loading-animation"></div>
@@ -136,7 +212,8 @@
     <div id="channel-list"></div>
 
     <footer>
-        <p>© 2024 Bangla IPTV | Built with ❤️ and Modern Web Technology</p>
+        <p>© 2024 Bangla IPTV | Built with ❤️ and Modern Web Technology<br>
+        Powered by <a href="https://t.me/RexxCheat" target="_blank">t.me/RexxCheat</a></p>
     </footer>
 
     <script>
@@ -219,13 +296,18 @@
 
         function playChannel(channel) {
             loadingAnimation.style.display = 'block';
+            document.getElementById('video-container').scrollIntoView({ behavior: 'smooth' });
 
             if (currentHls) {
                 currentHls.destroy();
             }
 
             if (Hls.isSupported()) {
-                currentHls = new Hls();
+                currentHls = new Hls({
+                    maxBufferLength: 30,
+                    maxMaxBufferLength: 60,
+                    maxBufferSize: 60 * 1000 * 1000
+                });
                 currentHls.loadSource(channel.url);
                 currentHls.attachMedia(player);
 
