--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Responsive Bangla IPTV</title>
+    <title>Advanced IPTV Player</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <style>
         :root {
-            --primary-color: #3498db;
-            --secondary-color: #2980b9;
-            --background-color: #ecf0f1;
-            --text-color: #2c3e50;
-            --card-background: #ffffff;
-            --card-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            --header-height: 60px;
-            --sidebar-width: 250px;
+            --primary-color: #0078d4;
+            --background-color: #f0f4f8;
+            --text-color: #333;
+            --card-background: #fff;
+            --card-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            --transition-speed: 0.3s;
         }
 
         * {
@@ -25,194 +23,198 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, sans-serif;
             background-color: var(--background-color);
             color: var(--text-color);
             line-height: 1.6;
         }
 
         header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: var(--header-height);
             background-color: var(--primary-color);
-            color: white;
+            color: #fff;
+            padding: 10px 20px;
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            padding: 0 20px;
-            z-index: 1000;
+            box-shadow: var(--card-shadow);
         }
 
         header h1 {
             font-size: 1.5rem;
         }
 
-        header #sidebar-toggle {
-            margin-left: auto;
-            background: none;
-            border: none;
-            color: white;
-            font-size: 1.5rem;
-            cursor: pointer;
+        header input {
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            width: 300px;
         }
 
         .container {
             display: flex;
-            margin-top: var(--header-height);
-        }
-
-        .sidebar {
-            width: var(--sidebar-width);
-            background-color: var(--card-background);
-            height: 100vh;
-            position: fixed;
-            top: var(--header-height);
-            left: 0;
-            overflow-y: auto;
-            transition: transform 0.3s ease-in-out;
-            z-index: 900;
-        }
-
-        .sidebar.hidden {
-            transform: translateX(-100%);
-        }
-
-        .sidebar-content {
-            padding: 20px;
-        }
-
-        .main-content {
-            flex: 1;
-            margin-left: var(--sidebar-width);
-            padding: 20px;
-            transition: margin-left 0.3s ease-in-out;
-        }
-
-        .main-content.full-width {
-            margin-left: 0;
-        }
-
-        .channel-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            flex-wrap: wrap;
             gap: 20px;
+            padding: 20px;
         }
 
         .channel-card {
             background-color: var(--card-background);
-            border-radius: 8px;
+            border-radius: 10px;
             overflow: hidden;
+            width: calc(25% - 20px);
             box-shadow: var(--card-shadow);
             cursor: pointer;
-            transition: transform 0.2s ease-in-out;
+            transition: transform var(--transition-speed) ease-in-out;
         }
 
         .channel-card:hover {
-            transform: translateY(-5px);
+            transform: scale(1.05);
         }
 
         .channel-card img {
             width: 100%;
-            height: 120px;
+            height: 150px;
             object-fit: cover;
         }
 
-        .channel-card .channel-info {
+        .channel-card h3 {
+            text-align: center;
             padding: 10px;
+            font-size: 1rem;
+            margin: 0;
         }
 
         #video-container {
-            position: relative;
+            position: fixed;
+            bottom: 0;
+            left: 0;
             width: 100%;
-            padding-top: 56.25%;
-            background-color: #000;
-            margin-bottom: 20px;
+            background: black;
+            height: 30%;
+            display: none;
         }
 
-        #video-player {
-            position: absolute;
-            top: 0;
-            left: 0;
+        #video-container video {
             width: 100%;
             height: 100%;
         }
 
         @media (max-width: 768px) {
-            .sidebar {
-                transform: translateX(-100%);
+            .channel-card {
+                width: calc(50% - 20px);
             }
+        }
 
-            .main-content {
-                margin-left: 0;
-            }
-
-            .channel-grid {
-                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        @media (max-width: 480px) {
+            .channel-card {
+                width: calc(100% - 20px);
             }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Responsive Bangla IPTV</h1>
-        <button id="sidebar-toggle"><i class="fas fa-bars"></i></button>
+        <h1>Bangla IPTV</h1>
+        <input type="text" id="search-input" placeholder="Search channels...">
     </header>
 
-    <div class="container">
-        <aside class="sidebar hidden" id="sidebar">
-            <div class="sidebar-content">
-                <input type="text" id="search-input" placeholder="Search channels..." style="width: 100%; padding: 10px; margin-bottom: 20px;">
-                <div id="category-filter"></div>
-                <h2>Favorites</h2>
-                <div id="favorites-list"></div>
-                <h2>Recent</h2>
-                <div id="recent-list"></div>
-            </div>
-        </aside>
+    <div class="container" id="channel-container"></div>
 
-        <main class="main-content full-width" id="main-content">
-            <div id="video-container">
-                <video id="video-player" controls></video>
-            </div>
-            <div id="channel-grid" class="channel-grid"></div>
-        </main>
+    <div id="video-container">
+        <video id="video-player" controls autoplay></video>
     </div>
 
     <script>
-        const sidebar = document.getElementById('sidebar');
-        const sidebarToggle = document.getElementById('sidebar-toggle');
-        const mainContent = document.getElementById('main-content');
+        const m3uUrl = "https://raw.githubusercontent.com/likhonisaac/ip-tv/refs/heads/main/IPTV";
 
-        // Toggle sidebar visibility
-        sidebarToggle.addEventListener('click', () => {
-            sidebar.classList.toggle('hidden');
-            mainContent.classList.toggle('full-width');
-        });
+        const container = document.getElementById('channel-container');
+        const videoContainer = document.getElementById('video-container');
+        const videoPlayer = document.getElementById('video-player');
+        const searchInput = document.getElementById('search-input');
 
-        // Example: Adding dummy channel data for demonstration
-        const channelGrid = document.getElementById('channel-grid');
-        const dummyChannels = Array(10).fill().map((_, i) => ({
-            name: `Channel ${i + 1}`,
-            logo: 'https://via.placeholder.com/200x120',
-            url: '#'
-        }));
+        const fetchM3U = async () => {
+            try {
+                const response = await fetch(m3uUrl);
+                const text = await response.text();
+                return text;
+            } catch (error) {
+                console.error('Error fetching M3U file:', error);
+                return null;
+            }
+        };
 
-        dummyChannels.forEach(channel => {
-            const channelCard = document.createElement('div');
-            channelCard.className = 'channel-card';
-            channelCard.innerHTML = `
-                <img src="${channel.logo}" alt="${channel.name}">
-                <div class="channel-info">
-                    <h3>${channel.name}</h3>
-                </div>
-            `;
-            channelCard.addEventListener('click', () => {
-                alert(`Playing ${channel.name}`);
+        const parseM3U = (data) => {
+            const lines = data.split('\n');
+            const channels = [];
+            let currentChannel = null;
+
+            lines.forEach(line => {
+                if (line.startsWith('#EXTINF')) {
+                    const logoMatch = line.match(/tvg-logo="(.*?)"/);
+                    const nameMatch = line.match(/,(.*)$/);
+
+                    currentChannel = {
+                        logo: logoMatch ? logoMatch[1] : '',
+                        name: nameMatch ? nameMatch[1] : '',
+                    };
+                } else if (line.startsWith('http') && currentChannel) {
+                    currentChannel.url = line.trim();
+                    channels.push(currentChannel);
+                    currentChannel = null;
+                }
             });
-            channelGrid.appendChild(channelCard);
-        });
+
+            return channels;
+        };
+
+        const validateChannel = async (url) => {
+            try {
+                const response = await fetch(url, { method: 'HEAD' });
+                return response.status === 200;
+            } catch {
+                return false;
+            }
+        };
+
+        const displayChannels = async (channels) => {
+            container.innerHTML = '';
+            for (const channel of channels) {
+                const isValid = await validateChannel(channel.url);
+                if (isValid) {
+                    const card = document.createElement('div');
+                    card.className = 'channel-card';
+                    card.innerHTML = `
+                        <img src="${channel.logo}" alt="${channel.name}">
+                        <h3>${channel.name}</h3>
+                    `;
+
+                    card.addEventListener('click', () => {
+                        videoPlayer.src = channel.url;
+                        videoContainer.style.display = 'block';
+                    });
+
+                    container.appendChild(card);
+                }
+            }
+        };
+
+        const init = async () => {
+            const m3uData = await fetchM3U();
+            if (m3uData) {
+                const channels = parseM3U(m3uData);
+                await displayChannels(channels);
+
+                searchInput.addEventListener('input', () => {
+                    const query = searchInput.value.toLowerCase();
+                    document.querySelectorAll('.channel-card').forEach(card => {
+                        const name = card.querySelector('h3').textContent.toLowerCase();
+                        card.style.display = name.includes(query) ? '' : 'none';
+                    });
+                });
+            }
+        };
+
+        init();
     </script>
 </body>
 </html>
